[package]
name = "traxi"
version = "0.4.0"
authors = ["Kane Rogers <kane.m.rogers@gmail.com>"]

[lib]
name = "traxi"
crate-type = ["rlib", "dylib"]

[dependencies]
libc = "0.2"
pnet = { version = "0.13.0", path = "../../libpnet" }
rustc-serialize = "0.3.18"
log = "0.3"
jni-sys = "0.1.0"
rand = "0.3"
mio = { version = "0.5.1", path = "../../mio" }
nix = { version = "0.5", path = "../../nix" }
net2 = "0.2.23"
ansi_term = "0.7"
bytes  = "0.3.0"
bit-vec = "0.4.3"
httparse = "1.1"
byteorder = "0.5.1"
regex = "0.1"
time = "0.1.35"
csv = "0.14.4"
hyper = "0.10"
zip = "0.1"
chrono = "^0.2.21"
fnv = "1.0.5"

[dependencies.rusoto]
version = "0.24"
features = ["kinesis"]

[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.2.2"

[target.'cfg(not(target_os="android"))'.dependencies]
log4rs = "0.5"

[[test]]
name = "test"
path = "test/mod.rs"
