[package]
name = "traxi"
version = "0.5.1"
authors = ["Kane Rogers <kane.m.rogers@gmail.com>"]

[lib]
name = "traxi"
crate-type = ["rlib", "dylib"]

[dependencies]
libc = "0.2"
pnet = { version = "0.13.0", git = "ssh://git@bitbucket.org:22/kanerogers/libpnet.git",  branch="fixes"}
rustc-serialize = "0.3.18"
log = "0.3"
jni-sys = "0.1.0"
rand = "0.3"
mio = { version = "0.5.1", git = "ssh://git@bitbucket.org:22/traxicorp/mio.git" }
nix = { version = "0.5.1", git = "ssh://git@bitbucket.org:22/traxicorp/nix.git" }
net2 = "0.2.23"
ansi_term = "0.7"
bytes  = "0.3.0"
bit-vec = "0.4.3"
httparse = "1.1"
byteorder = "0.5.1"
regex = "0.1"
time = "0.1.35"
hyper = "0.10"
hyper-native-tls = "0.2"
chrono = "^0.2.21"
fnv = "1.0.5"
rusoto_core = "0.26"
rusoto_kinesis = "0.26"
rusoto_credential = "0.7"
lazy_static = "0.2.8"
itertools = "0.6.0"
ssl-interceptor = {git = "ssh://git@github.com:22/traxicorp/ssl-interceptor"}

[replace]
"native-tls:0.1.4" = { git = "ssh://git@github.com:22/traxicorp/rust-native-tls" }

[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.2.2"

[target.'cfg(not(target_os="android"))'.dependencies]
log4rs = "0.5"

[[test]]
name = "test"
path = "test/mod.rs"
